--- a/app/src/main/res/layout/activity_audition.xml
+++ b/app/src/main/res/layout/activity_audition.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@mipmap/blur"
-        >
+        android:background="@mipmap/blur">
+
         <EditText
             android:layout_width="match_parent"
             android:id="@+id/e1"
