--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -76,6 +76,13 @@
 
 </LinearLayout>
 
+    <ImageView
+        android:layout_width="25sp"
+        android:layout_height="25sp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/free_coins"
+        android:layout_margin="8sp"/>
 
 
 </RelativeLayout>
