--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="8sp"
+        android:layout_marginTop="5sp"
         android:background="?android:attr/selectableItemBackground">
 
         <ImageView
