--- a/app/src/main/res/layout/activity_starting_screen.xml
+++ b/app/src/main/res/layout/activity_starting_screen.xml
@@ -8,7 +8,7 @@
     android:background="@mipmap/blur"
     android:padding="10dp"
     android:orientation="vertical"
-    tools:context="com.example.iyashwant.spiderprojectprototype.StartingScreen">
+    tools:context="com.example.iyashwant.spiderprojectprototype.registration.StartingScreen">
 
     <RelativeLayout
         android:id="@+id/layout1"
