--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@mipmap/wall"
-    tools:context="com.example.iyashwant.spiderprojectprototype.Login2"
+    tools:context="com.example.iyashwant.spiderprojectprototype.app_startup.Login2"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:screenOrientation="portrait">
