--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -6,7 +6,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.iyashwant.spiderprojectprototype.Login2"
+    tools:context="com.example.iyashwant.spiderprojectprototype.app_startup.Login2"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:screenOrientation="portrait">
