--- a/app/src/main/res/layout/activity_profile_view_edit.xml
+++ b/app/src/main/res/layout/activity_profile_view_edit.xml
@@ -32,6 +32,12 @@
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.9" />
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:src="@drawable/edit_white"
+                android:padding="120sp"/>
+
             <FrameLayout
                 android:id="@+id/profileview_frame"
                 android:layout_width="match_parent"
@@ -41,65 +47,78 @@
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.3">
 
-                    <LinearLayout
-                        android:id="@+id/profile_title_layout"
-                        android:background="#40ffffff"
-                        android:orientation="vertical"
-                        android:layout_gravity="bottom"
+                <LinearLayout
+                    android:id="@+id/profile_title_layout"
+                    android:background="#40ffffff"
+                    android:orientation="vertical"
+                    android:layout_gravity="bottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="90sp">
+
+                    <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="90sp">
+                        android:layout_height="wrap_content"
+                        android:text="Person's Name"
+                        android:layout_gravity="end"
+                        android:textAlignment="textEnd"
+                        android:textColor="@android:color/white"
+                        android:textSize="25sp"
+                        android:paddingRight="16sp"
+                        android:paddingTop="10sp"/>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_gravity="end">
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Person's Name"
-                            android:layout_gravity="end"
-                            android:textAlignment="textEnd"
-                            android:textColor="@android:color/white"
-                            android:textSize="25sp"
-                            android:paddingRight="16sp"
-                            android:paddingTop="10sp"/>
-
-                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:layout_gravity="end">
+                            android:layout_gravity="end"
+                            android:layout_marginTop="4dp"
+                            android:text="Craft"
+                            android:textAlignment="textEnd"
+                            android:textColor="@android:color/white" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="end"
-                                android:layout_marginTop="4dp"
-                                android:text="Craft"
-                                android:textAlignment="textEnd"
-                                android:textColor="@android:color/white" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="  |  "
+                            android:textColor="#ffffff" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="  |  "
-                                android:textColor="#ffffff" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="end"
-                                android:layout_marginTop="4dp"
-                                android:paddingRight="16sp"
-                                android:text="Age"
-                                android:textAlignment="textEnd"
-                                android:textColor="@android:color/white" />
-
-                        </LinearLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="end"
+                            android:layout_marginTop="4dp"
+                            android:paddingRight="16sp"
+                            android:text="Age"
+                            android:textAlignment="textEnd"
+                            android:textColor="@android:color/white" />
 
                     </LinearLayout>
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:layout_width="120sp"
-                    android:layout_height="120sp"
-                    android:layout_marginLeft="16sp"
-                    android:src="@drawable/sample1"/>
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="120sp"
+                        android:layout_height="120sp"
+                        android:layout_marginLeft="16sp"
+                        android:src="@drawable/sample1" />
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:layout_width="120sp"
+                        android:layout_height="120sp"
+                        android:layout_marginLeft="16sp"
+                        android:src="@drawable/edit_white"
+                        android:padding="40sp" />
+
+                </RelativeLayout>
 
             </FrameLayout>
 
@@ -125,36 +144,6 @@
                         android:tint="#ffffff"
                         android:background="#00000000"
                         android:layout_alignParentLeft="true"/>
-
-                    <ImageButton
-                        android:id="@+id/edit_profile"
-                        android:layout_width="25sp"
-                        android:layout_height="?attr/actionBarSize"
-                        android:paddingTop="15sp"
-                        android:paddingBottom="15sp"
-                        android:src="@drawable/edit_white"
-                        android:scaleType="centerCrop"
-                        android:layout_alignParentRight="true"
-                        android:tint="#ffffff"
-                        android:background="#00000000"
-                        android:layout_marginLeft="16sp"
-                        android:layout_marginTop="16sp"
-                        android:layout_marginRight="60sp"
-                        android:layout_marginBottom="16sp"/>
-
-                    <ImageButton
-                        android:id="@+id/fav_profile"
-                        android:layout_width="35sp"
-                        android:layout_height="?attr/actionBarSize"
-                        android:paddingTop="15sp"
-                        android:paddingBottom="15sp"
-                        android:src="@drawable/heart_outline"
-                        android:layout_alignParentRight="true"
-                        android:scaleType="centerCrop"
-                        android:tint="#ffffff"
-                        android:background="#00000000"
-                        android:layout_marginRight="10sp"/>
-
 
                 </RelativeLayout>
 
@@ -202,25 +191,29 @@
                         android:textAlignment="center"
                         android:textSize="15sp" />
 
-                    <TextView
+                    <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
+                        android:textSize="14sp"
                         android:text="This is where information about someone can go"
                         android:textAlignment="center"/>
 
-                    <TextView
+                    <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="#90000000"
                         android:fontFamily="sans-serif-condensed"
                         android:layout_marginTop="5sp"
+                        android:textSize="14sp"
                         android:textAlignment="center"
                         android:text="Interested Roles: Roles that the person is interested in can be added"/>
 
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
+
+            <!--
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -290,6 +283,8 @@
 
             </LinearLayout>
 
+            -->
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -299,13 +294,13 @@
                 android:layout_marginBottom="5sp"
                 android:background="#60ffffff">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:lineSpacingExtra="8dp"
-                        android:text="PERSONAL DETAILS"
-                        android:textColor="#000000"
-                        android:textSize="15sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:lineSpacingExtra="8dp"
+                    android:text="PERSONAL DETAILS"
+                    android:textColor="#000000"
+                    android:textSize="15sp" />
 
                 <LinearLayout
                     android:layout_marginTop="5sp"
@@ -320,7 +315,8 @@
                         android:text="Home Town: "
                         android:textStyle="bold"/>
 
-                    <TextView
+                    <EditText
+                        android:textSize="14sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
@@ -341,7 +337,8 @@
                         android:text="Residing In: "
                         android:textStyle="bold"/>
 
-                    <TextView
+                    <EditText
+                        android:textSize="14sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
@@ -362,7 +359,8 @@
                         android:text="Languages Spoken: "
                         android:textStyle="bold"/>
 
-                    <TextView
+                    <EditText
+                        android:textSize="14sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
@@ -370,7 +368,7 @@
 
                 </LinearLayout>
 
-                </LinearLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -401,7 +399,7 @@
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Height "
+                        android:text="Height"
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:background="@drawable/box4"
@@ -421,7 +419,8 @@
                         android:layout_marginRight="10sp"
                         android:padding="4sp"/>
 
-                    <TextView
+                    <EditText
+                        android:textSize="14sp"
                         android:layout_width="0sp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
@@ -434,7 +433,8 @@
                         android:layout_marginRight="10sp"
                         android:padding="4sp"/>
 
-                    <TextView
+                    <EditText
+                        android:textSize="14sp"
                         android:layout_width="0sp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
@@ -454,18 +454,20 @@
                     android:orientation="horizontal"
                     android:weightSum="4">
 
-                    <TextView
+                    <EditText
+                        android:textSize="14sp"
                         android:layout_width="0sp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
-                        android:text="Height "
+                        android:text="Height"
                         android:textAlignment="center"
                         android:background="@drawable/box5"
                         android:layout_marginRight="10sp"
                         android:padding="4sp"/>
 
-                    <TextView
+                    <EditText
+                        android:textSize="14sp"
                         android:layout_width="0sp"
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
@@ -516,7 +518,8 @@
                         android:text="Facial Hair: "
                         android:textStyle="bold"/>
 
-                    <TextView
+                    <EditText
+                        android:textSize="14sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
@@ -537,7 +540,8 @@
                         android:text="Skin Tone: "
                         android:textStyle="bold"/>
 
-                    <TextView
+                    <EditText
+                        android:textSize="14sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
