--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#ffffff"
-    tools:context="com.example.iyashwant.spiderprojectprototype.SplashScreen">
+    tools:context="com.example.iyashwant.spiderprojectprototype.app_startup.SplashScreen">
 
     <VideoView
         android:id="@+id/splashvideo"
@@ -17,8 +17,8 @@
         android:layout_alignParentTop="true"/>
 
     <ImageView
-        android:layout_width="100sp"
-        android:layout_height="100sp"
+        android:layout_width="150sp"
+        android:layout_height="150sp"
         android:src="@drawable/logo"
         android:layout_centerInParent="true" />
 
