--- a/app/src/main/res/layout/activity_starting_screen.xml
+++ b/app/src/main/res/layout/activity_starting_screen.xml
@@ -36,7 +36,7 @@
 
         <RelativeLayout
             android:padding="10dp"
-
+            android:background="?android:attr/selectableItemBackground"
             android:layout_marginTop="30dp"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="50dp"
@@ -66,6 +66,7 @@
             android:padding="10dp"
             android:layout_marginTop="30dp"
             android:layout_width="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
             android:layout_alignParentRight="true"
             android:layout_marginRight="50dp"
             android:layout_height="wrap_content">
