--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@mipmap/wall"
+    android:background="@drawable/animation_background"
     tools:context="com.example.iyashwant.spiderprojectprototype.app_startup.Login2"
     android:focusable="true"
+    android:id="@+id/parentLayout"
     android:focusableInTouchMode="true"
     android:screenOrientation="portrait">
+
 
     <EditText
         android:id="@+id/email"
@@ -16,7 +19,7 @@
         android:layout_height="48dp"
         android:background="@drawable/bubble"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginTop="280sp"
         android:layout_marginLeft="30sp"
         android:layout_marginRight="30sp"
@@ -73,3 +76,5 @@
         android:layout_marginTop="37dp" />
 
     </RelativeLayout>
+
+
