--- a/app/src/main/res/layout/activity_privacy_policy.xml
+++ b/app/src/main/res/layout/activity_privacy_policy.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context="com.example.iyashwant.spiderprojectprototype.PrivacyPolicy"
     android:background="@mipmap/blur">
 
@@ -14,7 +15,6 @@
         android:textColor="#ffffff"
         android:layout_marginTop="16sp"
         android:layout_marginLeft="16sp"
-        android:layout_marginRight="16sp"
-        android:scrollbars = "vertical" />
+        android:layout_marginRight="16sp" />
 
-</RelativeLayout>
+</ScrollView>
