--- a/app/src/main/res/layout/activity_starting_screen.xml
+++ b/app/src/main/res/layout/activity_starting_screen.xml
@@ -36,7 +36,6 @@
 
         <RelativeLayout
             android:padding="10dp"
-            android:background="?android:attr/selectableItemBackground"
             android:layout_marginTop="30dp"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="50dp"
@@ -46,6 +45,8 @@
             <ImageView
                 android:layout_centerHorizontal="true"
                 android:id="@+id/craftsman_reg"
+                android:background="?android:attr/selectableItemBackground"
+
                 android:tint="#ffffff"
                 android:src="@drawable/ic_person"
                 android:layout_width="100dp"
@@ -58,7 +59,7 @@
                 android:gravity="center"
                 android:textColor="#ffffff"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/craftsman_reg"/>
+                android:layout_below="@+id/craftsman_reg"/>
 
         </RelativeLayout>
 
@@ -66,7 +67,6 @@
             android:padding="10dp"
             android:layout_marginTop="30dp"
             android:layout_width="wrap_content"
-            android:background="?android:attr/selectableItemBackground"
             android:layout_alignParentRight="true"
             android:layout_marginRight="50dp"
             android:layout_height="wrap_content">
@@ -77,6 +77,8 @@
                 android:id="@+id/client_reg"
                 android:tint="#ffffff"
                 android:layout_width="100dp"
+                android:background="?android:attr/selectableItemBackground"
+
                 android:layout_height="70dp"/>
 
             <TextView
@@ -85,7 +87,7 @@
                 android:text="Client"
                 android:gravity="center"
                 android:textColor="#ffffff"
-                android:layout_below="@id/client_reg"/>
+                android:layout_below="@+id/client_reg"/>
 
         </RelativeLayout>
 
