--- a/app/src/main/res/layout/activity_profile_view_edit.xml
+++ b/app/src/main/res/layout/activity_profile_view_edit.xml
@@ -145,6 +145,19 @@
                         android:background="#00000000"
                         android:layout_alignParentLeft="true"/>
 
+                    <ImageButton
+                        android:id="@+id/edit_done"
+                        android:layout_width="35sp"
+                        android:layout_height="?attr/actionBarSize"
+                        android:paddingTop="15sp"
+                        android:paddingBottom="15sp"
+                        android:src="@drawable/correct"
+                        android:layout_alignParentRight="true"
+                        android:scaleType="centerCrop"
+                        android:tint="#ffffff"
+                        android:background="#00000000"
+                        android:layout_marginRight="10sp"/>
+
                 </RelativeLayout>
 
             </android.support.v7.widget.Toolbar>
