--- a/app/src/main/res/layout/custom.xml
+++ b/app/src/main/res/layout/custom.xml
@@ -10,7 +10,7 @@
     </ImageView>
     <TextView android:id="@+id/imgName" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="8dp"
-       android:layout_gravity="center"
+       android:layout_gravity="center_vertical"
         android:textColor="#ffff"
         android:text="Text Here">
     </TextView>
