--- a/app/src/main/res/layout/activity_auditions_tab.xml
+++ b/app/src/main/res/layout/activity_auditions_tab.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="fixed"
-        android:background="#323232"
+        android:background="#212121"
+        android:elevation="5sp"
         app:tabGravity="fill">
 
     </android.support.design.widget.TabLayout>
