--- a/app/src/main/res/layout/activity_client_dashboard.xml
+++ b/app/src/main/res/layout/activity_client_dashboard.xml
@@ -13,6 +13,8 @@
         android:id="@+id/client_dashboard_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#212121"
+        android:elevation="5sp"
         app:tabMode="fixed"
         app:tabGravity="fill">
 
