--- a/app/src/main/res/layout/activity_dashboard_messages_tab_fragment.xml
+++ b/app/src/main/res/layout/activity_dashboard_messages_tab_fragment.xml
@@ -12,6 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="fixed"
+        android:background="#212121"
+        android:elevation="5sp"
         app:tabGravity="fill">
 
     </android.support.design.widget.TabLayout>
