--- a/app/src/main/res/layout/activity_inbox_tab.xml
+++ b/app/src/main/res/layout/activity_inbox_tab.xml
@@ -6,20 +6,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-                <android.support.design.widget.TabLayout
-                    android:id="@+id/inbox_tabs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:tabMode="fixed"
-                    app:tabGravity="fill">
+    <android.support.design.widget.TabLayout
+        android:id="@+id/inbox_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabMode="fixed"
+        android:background="#212121"
+        android:elevation="5sp"
+        app:tabGravity="fill"/>
 
-                </android.support.design.widget.TabLayout>
-
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/inbox_tabbed"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                </android.support.v4.view.ViewPager>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/inbox_tabbed"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
