--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -60,7 +60,7 @@
             android:scaleType="fitCenter"
             android:padding="0dp"
             android:background="#00000000"
-            android:layout_marginLeft="19dp" />
+            android:layout_marginLeft="19dp"/>
 
     </LinearLayout>
 
@@ -146,6 +146,7 @@
 
 
     <RelativeLayout
+        android:visibility="gone"
         android:id="@+id/webhold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
