--- a/app/src/main/res/layout/favs_item.xml
+++ b/app/src/main/res/layout/favs_item.xml
@@ -3,18 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center_horizontal">
+    android:layout_height="wrap_content">
 
    <com.makeramen.roundedimageview.RoundedImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fav_item"
        android:layout_height="140sp"
-       android:layout_width="140sp"
-       android:scaleType="fitCenter"
-       android:padding="5sp"
-       app:riv_corner_radius="10sp"
-       app:riv_mutate_background="true"
-       app:riv_tile_mode="repeat" />
+       android:layout_width="match_parent"
+       android:scaleType="centerCrop"
+       app:riv_corner_radius="10sp"/>
 
 </LinearLayout>
