--- a/app/src/main/res/layout/fragment_talenthuntfrag.xml
+++ b/app/src/main/res/layout/fragment_talenthuntfrag.xml
@@ -1,9 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".talent_hunt.TalentHuntFrag">
-    se
+    android:layout_height="match_parent">
 
    <android.support.v7.widget.SearchView
        android:layout_width="match_parent"
