--- a/app/src/main/res/layout/nav_header_main3.xml
+++ b/app/src/main/res/layout/nav_header_main3.xml
@@ -83,56 +83,6 @@
 
         </LinearLayout>
 
-        <!--
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0sp"
-            android:layout_weight="3.25"
-            android:orientation="horizontal"
-            android:weightSum="2">
-
-            <ImageView
-                android:id="@+id/nav_pic"
-                android:layout_width="0sp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:padding="25sp"
-                app:srcCompat="@mipmap/ic_launcher_round" />
-
-
-            <LinearLayout
-                android:layout_width="0sp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:padding="20dp">
-
-                <TextView
-                    android:id="@+id/nav_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10sp"
-                    android:text="Name"
-                    android:textColor="#ffffff"
-                    android:textSize="20sp"
-                    android:layout_marginTop="20sp"/>
-
-                <TextView
-                    android:id="@+id/nav_craft"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/nav_name"
-                    android:text="Craft"
-                    android:textColor="#ffffff"
-                    android:textSize="15sp"
-                    android:layout_marginBottom="20sp"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        -->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -146,6 +96,7 @@
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/aud_handy"
                 android:scaleType="fitCenter"
                 android:layout_margin="5sp"/>
@@ -155,6 +106,7 @@
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/fav_handy"
                 android:scaleType="fitCenter"
                 android:layout_margin="5sp"/>
@@ -164,6 +116,7 @@
                 android:layout_width="0sp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="?android:attr/selectableItemBackground"
                 android:src="@drawable/inbox_handy"
                 android:scaleType="fitCenter"
                 android:layout_margin="5sp"/>
