--- a/app/src/main/res/layout/talenthuntadapter.xml
+++ b/app/src/main/res/layout/talenthuntadapter.xml
@@ -1,55 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginRight="5dp"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="5dp"
     android:layout_width="match_parent"
-
+    app:cardElevation="5dp"
     android:layout_height="wrap_content"
     android:id="@+id/overall"
-    android:layout_marginBottom="20dp"
-    >
-<LinearLayout
+    android:layout_marginBottom="5sp">
+
+<RelativeLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="10dp">
 
-    android:paddingBottom="30dp"
-    >
     <TextView
         android:layout_marginLeft="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="HHHHHHH"
+        android:layout_alignParentTop="true"
         android:textColor="#FFFFFF"
-        android:textSize="30dp"
+        android:textSize="40sp"
         android:fontFamily="cursive"
         android:id="@+id/craftname"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
+        android:layout_margin="5sp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/craftname"
         android:orientation="horizontal">
-        <ImageView
 
-            android:layout_width="110dp"
-            android:layout_height="110dp"
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/pic1"
-            android:layout_marginRight="10dp"/>
-        <ImageView
             android:layout_width="110dp"
             android:layout_height="110dp"
+            android:layout_margin="10sp"/>
+
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/pic2"
-            android:layout_marginRight="10dp"/>
-        <ImageView
             android:layout_width="110dp"
             android:layout_height="110dp"
+            android:layout_margin="10sp"/>
+
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/pic3"
-            android:layout_marginRight="20dp"/>
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:layout_margin="10sp"/>
+
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
 </android.support.v7.widget.CardView>
